--- a/containers/python/Dockerfile
+++ b/containers/python/Dockerfile
@@ -5,6 +5,8 @@ MAINTAINER Nishad Singh <nishadsingh@gmail.com>
 COPY predict_container.py /container/
 COPY predict_container_setup.py /container/
 
+COPY pywrencloudpickle.py /lib/
+
 CMD ["python", "-u", "/container/predict_container_setup.py"]
 
 # vim: set filetype=dockerfile:
