--- a/src/benchmarks/CMakeLists.txt
+++ b/src/benchmarks/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 ##################################
 # Benchmark executable
 
-add_executable(end_to_end_bench src/end_to_end_bench.cpp)
+add_executable(end_to_end_bench src/end_to_end_bench.cpp src/bench_utils.cpp src/include/bench_utils.hpp)
 
 target_link_libraries(end_to_end_bench clipper boost cxxopts)
 
@@ -20,4 +20,5 @@ target_link_libraries(rpcbench clipper cxxopts)
 # RPC Layer Protocol Testing executable
 
 add_executable(rpctest src/rpc_protocol_test.cpp)
+
 target_link_libraries(rpctest clipper cxxopts)
