--- a/src/libclipper/CMakeLists.txt
+++ b/src/libclipper/CMakeLists.txt
@@ -16,8 +16,7 @@ add_library(clipper
     src/redis.cpp
     src/logging.cpp
     src/json_util.cpp
-    src/exceptions.cpp
-    include/clipper/app_metrics.hpp)
+    src/exceptions.cpp)
 
 
 # Define headers for this library. PUBLIC headers are used for
